--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -14,21 +14,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="260dp"
             android:background="@color/colorPrimaryLight"
             android:orientation="vertical">
+
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profile_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
                 android:src="@drawable/profile"
                 app:civ_border_color="@android:color/transparent"
                 app:civ_border_width="2dp" />
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:layout_alignEnd="@id/profile_image"
+                android:layout_centerVertical="true"
+
+
+
+              >
+                <ImageView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_photo_camera"
+                    android:background="@drawable/circlebackground"
+                    android:backgroundTint="@color/red"
+                    android:padding="3dp"
+
+                    android:id="@+id/change_photo_image"
+
+                    />
+            </FrameLayout>
+
 
             <TextView
                 android:id="@+id/userFullname"
@@ -38,9 +64,13 @@
                 android:layout_marginTop="5dp"
                 android:textColor="#fff"
                 android:textSize="21sp"
+
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/profile_image"
                 android:textStyle="bold" />
 
-        </LinearLayout>
+
+        </RelativeLayout>
 
 
     </RelativeLayout>
