--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -28,7 +28,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
-                android:src="@drawable/profile"
+                android:src="@drawable/no_image"
                 app:civ_border_color="@android:color/transparent"
                 app:civ_border_width="2dp" />
             <FrameLayout
