--- a/app/src/main/res/layout-v21/task_listing_single_item_layout.xml
+++ b/app/src/main/res/layout-v21/task_listing_single_item_layout.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
     android:paddingTop="5dp"
     android:layout_margin="5dp"
     android:padding="5dp">
-<android.support.v7.widget.CardView android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:elevation="@dimen/cardview_default_elevation"
-    app:cardCornerRadius="5dp"
-    android:layout_marginTop="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingTop="50dp"
+        app:cardCornerRadius="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="2dp">
+            android:padding="5dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -38,6 +39,7 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="14sp"
                     android:textStyle="bold"
+                    android:id="@+id/taskText"
                     android:layout_alignParentStart="true"
                     />
 
@@ -64,7 +66,7 @@
                 android:textColor="@color/black"
                 android:paddingStart="5dp"
                 android:paddingEnd="2dp"
-                android:textSize="12sp"
+                android:textSize="11sp"
                 android:textStyle="normal"
                 android:id="@+id/taskTitleText"
                 android:paddingTop="5dp"
@@ -197,7 +199,7 @@
                 android:orientation="horizontal"
                 android:paddingTop="5dp"
                 android:background="@drawable/line"
-                android:backgroundTint="@color/white"
+
                 android:visibility="gone">
 
                 <TextView
@@ -225,7 +227,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_directions_black_24dp"
+
                 android:text="Get Directions"
                 android:textColor="@color/black"
                 android:textSize="12sp"
@@ -233,8 +235,8 @@
                 android:gravity="center_vertical"
                 android:drawablePadding="5dp"
                 android:id="@+id/getDirection"
-
                 />
+            <!--android:drawableStart="@drawable/ic_directions_black_24dp"-->
 
 
             <TextView
@@ -282,3 +284,4 @@
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
+
