--- a/app/src/main/res/layout/task_listing_single_item_layout.xml
+++ b/app/src/main/res/layout/task_listing_single_item_layout.xml
@@ -3,9 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:orientation="vertical"
-
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
     android:paddingTop="5dp"
@@ -16,18 +14,15 @@
     <android.support.v7.widget.CardView android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-
         app:cardCornerRadius="5dp"
         android:layout_marginTop="10dp"
         android:paddingTop="50dp"
-
         xmlns:android="http://schemas.android.com/apk/res/android">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-
             android:padding="5dp">
 
             <RelativeLayout
@@ -72,7 +67,7 @@
                 android:textColor="@color/black"
                 android:paddingStart="5dp"
                 android:paddingEnd="2dp"
-                android:textSize="12sp"
+                android:textSize="11sp"
                 android:textStyle="normal"
                 android:id="@+id/taskTitleText"
                 android:paddingTop="5dp"
@@ -233,7 +228,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_directions_black_24dp"
                 android:text="Get Directions"
                 android:textColor="@color/black"
                 android:textSize="12sp"
@@ -241,8 +235,8 @@
                 android:gravity="center_vertical"
                 android:drawablePadding="5dp"
                 android:id="@+id/getDirection"
-
                 />
+            <!--android:drawableStart="@drawable/ic_directions_black_24dp"-->
 
 
             <TextView
