--- a/app/src/main/res/menu/current_place_menu.xml
+++ b/app/src/main/res/menu/current_place_menu.xml
@@ -3,10 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/mapFragment"
-        android:icon="@drawable/ic_map"
-        android:orderInCategory="1"
-        android:title="Map"
+        android:id="@+id/option_get_place"
+        android:title="@string/option_get_place"
         app:showAsAction="always" />
 
 </menu>
